Various changes to make the site scale better for different devices. Also added structure for the haxe/unity games to be put into.

--- a/index.html
+++ b/index.html
@@ -22,21 +22,36 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar center navbar-default navbar-fixed-top">
-      <div class="navbar navbar-inner">
-        <a href="index.html"><p class="navbar-text">HOME</p></a>
-        <a href="about.html"><p class="navbar-text">ABOUT</p></a>
-        <a href="my-work.html"><p class="navbar-text">MY WORK</p></a>
-        <a href="contact.html"><p class="navbar-text">CONTACT</p></a>
-      </div>
-    </nav>    
-    <div class="container-fluid fullpage lightblue">
-        <h1>Welcome!</h1>
-        <p class="content-para">My name is Daniel Howlett and I am a Computer Games Programming student in my final year at The University of Huddersfield.</p>
-        <p class="content-para">and here be another paragraph of content. <br> 
-        and more <br>
-        and more <br>
-        and more</p>      
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>                        
+                </button>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse navbar-inner">
+            <ul class="nav navbar-nav">
+                <li><a href="index.html"><p class="navbar-text">HOME</p></a></li>
+                <li><a href="about.html"><p class="navbar-text">ABOUT</p></a></li>
+                <li><a href="my-work.html"><p class="navbar-text">MY WORK</p></a></li>
+                <li><a href="contact.html"><p class="navbar-text">CONTACT</p></a></li>
+            </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="content-section fullpage lightblue">
+        <div class="container verticalcent">
+            <h1>Hello!</h1>
+            <p class="content-para top">My name is Daniel Howlett and I am a Computer Games Programming student in my final year at The University of Huddersfield. 
+            </p>
+            <p class="content-para">
+            I am an affable person with a strong work ethic and the motivation to have a career as a developer. I have experience with a range of programming languages and technologies but my passion for programming extends beyond any specific language and I actively work to go out of my comfort zone and further my understanding of new languages and technologies.
+            </p>
+            <p class="content-para bottom">The purpose of this website is to give you a bit more insight into who I am as well as show you some of my work.
+            </p>   
+        </div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
