--- a/about.html
+++ b/about.html
@@ -22,35 +22,47 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar center navbar-default navbar-fixed-top">
-      <div class="navbar navbar-inner">
-        <a href="index.html"><p class="navbar-text">HOME</p></a>
-        <a href="about.html"><p class="navbar-text">ABOUT</p></a>
-        <a href="my-work.html"><p class="navbar-text">MY WORK</p></a>
-        <a href="contact.html"><p class="navbar-text">CONTACT</p></a>
-      </div>
-    </nav>
-    <div class="container-fluid fullpage sandybrown">
-        <h1>Who I am</h1>
-        <div class="row">
-          <div class="col-lg-4">
-            <a>
-              <img src="images/stemnet-logo.jpg" alt="STEMNET Logo" class="img-responsive img-rounded center-block">
-            </a>
-          </div>
-          <div class="col-lg-8">
-            <p class="content-para">I am a <a href="http://www.stemnet.org.uk/">STEMNET</a> (Science, Technology, Engineering and Mathematics Network) Ambassador! As a STEMNET Ambassador I have assisted in the running of weekly <a href="https://www.codeclub.org.uk/">Code Clubs</a> in primary schools where children were taught how to write code, typically using <a href="https://scratch.mit.edu/">Scratch</a> initially. This involved engaging students by teaching it in a fun and creative way as well as making sure I explained the concepts in a way that children could understand. </p>
-          </div>
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>                        
+                </button>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse navbar-inner">
+            <ul class="nav navbar-nav">
+                <li><a href="index.html"><p class="navbar-text">HOME</p></a></li>
+                <li><a href="about.html"><p class="navbar-text">ABOUT</p></a></li>
+                <li><a href="my-work.html"><p class="navbar-text">MY WORK</p></a></li>
+                <li><a href="contact.html"><p class="navbar-text">CONTACT</p></a></li>
+            </ul>
+            </div>
         </div>
+      </nav>
+    <div class="content-section sandybrown">
+      <div class="container">
+        <h1>Who I am</h1>    
+        <h2>I am a...</h2>    
+        <p class="content-para bottom "><a href="http://www.stemnet.org.uk/">STEMNET</a> (Science, Technology, Engineering and Mathematics Network) Ambassador! As a STEMNET Ambassador I have assisted in the running of weekly <a href="https://www.codeclub.org.uk/">Code Clubs</a> in primary schools where children were taught how to write code, typically using <a href="https://scratch.mit.edu/">Scratch</a> initially. This involved engaging students by teaching it in a fun and creative way as well as making sure I explained the concepts in a way that children could understand. </p>
+        </div>
+      </div>
     </div>
-    <div class="container-fluid white">
-        <p class="content-para">
-          I am also an avid gamer (perhaps unsurprising for a Computer Games Programming student!). This is usually PC gaming where I play a variety of games, nothing too hardcore, normally just whatever catches my eye on Steam
-        </p> 
+    <div class="content-section white">
+      <div class="container">
+          <h2>I am an...</h2>
+          <p class="content-para bottom">
+            Avid gamer (perhaps unsurprising for a Computer Games Programming student!). This is predominantly PC gaming where I play a variety of games, nothing too hardcore, normally just whatever catches my eye on Steam.
+          </p> 
+      </div>
     </div>
-    <div class="container-fluid fullpage darkslategray">
-        <p class="content-para">I am also a Microsoft Certified C# Developer. I'd used C# quite a bit at University but that hadn't introduced me to much more than the basics. As such, I started working towards the certification because I wanted to solidify my knowledge of the basics as well as build upon it by learning about some of the more complex language features. Working towards this also gave me an introduction to areas that I perhaps wouldn't have otherwise looked at, such as cryptography. I worked towards this in my personal time over course of several months before passing the exam in May 2015. <br> <br>
-        You can see a copy of my certificate here.</p> 
+    <div class="content-section darkslategray">
+      <div class="container">
+          <h2>I am a...</h2>
+          <p class="content-para bottom">Microsoft Certified C# Developer. I'd used C# quite a bit at University but that hadn't introduced me to much more than the basics. As such, I started working towards the certification because I wanted to solidify my knowledge of the basics as well as build upon it by learning about some of the more complex language features. Working towards this also gave me an introduction to areas that I perhaps wouldn't have otherwise looked at, such as cryptography. I worked towards this in my personal time over course of several months before passing the exam in May 2015. <br> <br>
+          You can see a copy of my certificate here.</p> 
+      </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
