--- a/contact.html
+++ b/contact.html
@@ -22,15 +22,27 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar center navbar-default navbar-fixed-top">
-      <div class="navbar navbar-inner">
-        <a href="index.html"><p class="navbar-text">HOME</p></a>
-        <a href="about.html"><p class="navbar-text">ABOUT</p></a>
-        <a href="my-work.html"><p class="navbar-text">MY WORK</p></a>
-        <a href="contact.html"><p class="navbar-text">CONTACT</p></a>
-      </div>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>                        
+                </button>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse navbar-inner">
+            <ul class="nav navbar-nav">
+                <li><a href="index.html"><p class="navbar-text">HOME</p></a></li>
+                <li><a href="about.html"><p class="navbar-text">ABOUT</p></a></li>
+                <li><a href="my-work.html"><p class="navbar-text">MY WORK</p></a></li>
+                <li><a href="contact.html"><p class="navbar-text">CONTACT</p></a></li>
+            </ul>
+            </div>
+        </div>
     </nav>
-      <div class="container-fluid fullpage lightblue">
+    <div class="content-section fullpage lightblue">
+      <div class="container">
         <h1>Get in touch</h1>
         <p class="content-para">Feel free to use the form below to contact me. Alternatively, if you prefer, you can email danhowlett94@gmail.com directly.
         </p>
@@ -53,17 +65,17 @@
                   <input type="text" class="form-control" id="subject" placeholder="Enter subject" required>
                 </div>
               </div>
-            <div class="form-group">
-              <label for="message" class="h4 ">Message*</label>
-              <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>
-            </div>
-            <button type="submit" id="form-submit" class="btn btn-success btn-lg pull-right ">Submit</button>
-            <div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>
-          </form>
-        </div>
-      </div>    
+              <div class="form-group">
+                <label for="message" class="h4 ">Message*</label>
+                <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>
+              </div>
+              <button type="submit" id="form-submit" class="btn btn-success btn-lg pull-right ">Submit</button>
+              <div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>
+            </form>
+          </div>
+        </div>    
+      </div>
     </div>
-
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
