--- a/my-work.html
+++ b/my-work.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Arvo|Muli:300' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script>
-    <!--
-    var unityObjectUrl = "http://webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/UnityObject2.js";
-    if (document.location.protocol == 'https:')
-    unityObjectUrl = unityObjectUrl.replace("http://", "https://ssl-");
-    document.write('<script type="text/javascript" src="' + unityObjectUrl + '"></script>');
-    -->
-    </script>
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Arvo|Muli:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <title>Dan Howlett Development</title>
 
     <!-- Bootstrap -->
@@ -57,26 +49,14 @@
            For my final year Team Project module I've been working alongside 2 other programmers and several designers. As part of the module, we took part in a month long game jam where we were tasked to create any game we liked, but it had to be in some way related to Mars. The idea we came up with was the Elon Musk Terraforming Game! With a game style similar to <a href="http://orteil.dashnet.org/cookieclicker/">Cookie Clicker</a>, you have to terraform mars by clicking on the planet in order to earn money and buy more gadgets to help you terraform!
         </p>
         <div class="row spaced hidden-sm hidden-xs">
-          <div class="btn-group btn-group-justified" role="group" aria-label="Play Web Version">
-            <a id="webUnityGame" class="btn btn-default btn-lg" role="button">Play Web Version</a>
-          </div>
-        </div>
-        <div id="unityPlayer" class="hidden-sm hidden-xs">
-          <p class="lead">Please note that the Unity Web Player isn't supported in 64 bit Firefox, Microsoft Edge or newer versions (45+) of Chrome. If you're seeing this message, either the web player isn't installed or it isn't supported in your browser.</p>
-          <div class="missing">
-            <a id="installUnity" title="Unity Web Player. Install now!">
-              <img alt="Unity Web Player. Install now!" src="http://webplayer.unity3d.com/installation/getunity.png" width="193" height="63" />
-            </a>
-          </div>
-        </div> 
-        <div class="row spaced hidden-sm hidden-xs">
-          <div class="btn-group btn-group-justified" role="group" aria-label="Download Windows Version">
-            <a id="windowsUnityGame" class="btn btn-default btn-lg" role="button">Download Windows Version</a>
-          </div>
-        </div>
-        <div class="row bottom hidden-sm hidden-xs">
           <div class="btn-group btn-group-justified" role="group" aria-label="View Image Gallery">
-            <a id="imagesUnityGame" class="btn btn-default btn-lg" role="button">Just show me some screenshots of the game</a>
+            <a id="imagesUnityGame" class="btn btn-default btn-lg" role="button">Show me some screenshots of the game</a>
+          </div>
+        </div>
+        <iframe style="display: none" id='unityImages' class="imgur-album" width="100%" height="550" frameborder="0" src="http://imgur.com/a/fs7TO/embed"></iframe>
+        <div class="row bottom hidden-sm hidden-xs">
+          <div class="btn-group btn-group-justified" role="group" aria-label="Download Windows Version">
+            <a id="windowsUnityGame" class="btn btn-default btn-lg" role="button" href="https://www.dropbox.com/sh/yg5m22qjtj7ixti/AAA7VZ8P1qlii_z_F4P8AzKka?dl=1">Download Windows Version</a>
           </div>
         </div>
       </div>
@@ -88,18 +68,14 @@
           With a number of different technologies out there now for cross-platform development, I wanted to learn a bit more about how it all works. For this, I decided to use Haxe/OpenFL/HaxeFlixel to create a simple Space Invaders type game where the player can customise the look of their ship which they use, along with various powerups, to fight off aliens. 
         </p> 
         <div class="row spaced hidden-sm hidden-xs">
-          <div class="btn-group btn-group-justified" role="group" aria-label="Play Web Version">
-            <a id="flashHaxeGame" class="btn btn-default btn-lg" role="button">Play Web Version (requires flash)</a>
-          </div>
-        </div>
-        <div class="row spaced hidden-sm hidden-xs">
-          <div class="btn-group btn-group-justified" role="group" aria-label="Download Windows Version">
-            <a id="windowsHaxeGame" class="btn btn-default btn-lg" role="button">Download Windows Version (non-flash)</a>
-          </div>
-        </div>
-        <div class="row bottom hidden-sm hidden-xs">
           <div class="btn-group btn-group-justified" role="group" aria-label="View Image Gallery">
-            <a id="imagesHaxeGame" class="btn btn-default btn-lg" role="button">Just show me some screenshots of the game</a>
+            <a id="imagesHaxeGame" class="btn btn-default btn-lg" role="button">Show me some screenshots of the game</a>
+          </div>
+        </div>
+        <iframe style="display: none" id='haxeImages' class='imgur-album' width='100%' height='550' frameborder='0' src='http://imgur.com/a/hPreB/embed'></iframe>
+        <div class="row bottom hidden-sm hidden-xs">
+          <div class="btn-group btn-group-justified" role="group" aria-label="Download Windows Version">
+            <a href="https://www.dropbox.com/sh/v7w82kp97phzqmt/AAD1jw-3zRH-LwpQMqPFI-5Aa?dl=1" id="windowsHaxeGame" class="btn btn-default btn-lg" role="button">Download Windows Version</a>
           </div>
         </div>
       </div>
@@ -117,6 +93,5 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/core-script.js"></script>
-    <script type="text/javascript" src="js/unity-game-load.js"></script>
   </body>
 </html>
