Various format changes, added image of exam certificate

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
       <div class="container">
           <h2>I am a...</h2>
           <p class="content-para bottom">Microsoft Certified C# Developer. I'd used C# quite a bit at University but that hadn't introduced me to much more than the basics. As such, I started working towards the certification because I wanted to solidify my knowledge of the basics as well as build upon it by learning about some of the more complex language features. Working towards this also gave me an introduction to areas that I perhaps wouldn't have otherwise looked at, such as cryptography. I worked towards this in my personal time over course of several months before passing the exam in May 2015. <br> <br>
-          You can see a copy of my certificate here.</p> 
+          You can see a copy of my certificate <a href="images/Microsoft Exam Transcript.jpg">here</a>.</p> 
       </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
