--- a/contact.html
+++ b/contact.html
@@ -44,36 +44,8 @@
     <div class="content-section fullpage lightblue">
       <div class="container">
         <h1>Get in touch</h1>
-        <p class="content-para">Feel free to use the form below to contact me. Alternatively, if you prefer, you can email danhowlett94@gmail.com directly.
-        </p>
-        <div class="row">
-          <div class="col-sm-6 col-sm-offset-3">          
-            <form role="form" id="contactForm">
-              <div class="row">
-                  <div class="form-group col-sm-6">
-                    <label for="name" class="h4">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Enter name">
-                  </div>
-                <div class="form-group col-sm-6">
-                  <label for="email" class="h4">Email*</label>
-                  <input type="email" class="form-control" id="email" placeholder="Enter email" required>
-                </div>
-              </div>
-              <div class="row">
-                <div class="form-group col-sm-12">
-                  <label for="subject" class="h4">Subject*</label>
-                  <input type="text" class="form-control" id="subject" placeholder="Enter subject" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="message" class="h4 ">Message*</label>
-                <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>
-              </div>
-              <button type="submit" id="form-submit" class="btn btn-success btn-lg pull-right ">Submit</button>
-              <div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>
-            </form>
-          </div>
-        </div>    
+        <p class="content-para">If you have any questions or want to know more then please don't hesitate to send an email to <strong>danhowlett94@gmail.com</strong>.
+        </p>   
       </div>
     </div>
 
